# OpenAvatarChat

./: .gitignore  AI_CHAT_SUCCESS.md  API_BACKEND_SUMMARY.md  API_EXTRACTION_PLAN.md  FRONTEND_COMPLETE.md  INSTALLATION_GUIDE.md  INSTRUCTIONS.md  NEW_ARCHITECTURE.md  PIPERTTS_GUIDE.md  QUARI_AI_SUCCESS.md  QUICK_AI_SETUP.sh  README.md  RESPEAKER_STT_OPTIMIZATION_GUIDE.md  advanced_respeaker_stt_tuning.py  configure_respeaker_stt.py  dump_talk_audio_assemblyai.pcm  dump_talk_audio_faster_whisper.pcm  dump_talk_audio_whisper.pcm  install_all.sh  install_windows.ps1  launch_gpu_stt.sh  launch_max_speed_gpu.sh  pyproject.toml  quick_install.sh  respeaker_stt_autoconfig.sh  respeaker_stt_monitor.py  start.sh  start_full_stack.sh  start_gpu_stt.sh  start_max_accuracy.sh  start_new_architecture.sh  start_quari_ai.sh  test_ai.py
api/: README.md  __init__.py  example_client.py  main.py  main_config.yaml  requirements.txt  setup.sh  start_api.sh
api/handlers/asr/faster_whisper/: asr_handler_faster_whisper.py  handler.py  pyproject.toml
config/: README_POLISH.md  chat_websocket_ai_no_avatar.yaml  chat_websocket_avatar.yaml  chat_websocket_echo.yaml  chat_websocket_full.yaml  chat_websocket_minimal.yaml  chat_websocket_openai.yaml  chat_websocket_simple.yaml  chat_websocket_text_only.yaml  chat_with_faster_whisper_cpu.yaml  chat_with_faster_whisper_cpu_optimized.yaml  chat_with_faster_whisper_max_accuracy.yaml  (+9 more)
src/handlers/asr/assemblyai/: __init__.py  pyproject.toml
src/handlers/asr/openai_whisper/: README.md  __init__.py  asr_handler_openai_whisper.py  pyproject.toml
(+101 files in other folders)
