[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "faster-whisper-asr-handler"
description = "Faster-Whisper ASR Handler for OpenAvatarChat"
requires-python = ">=3.8"
dependencies = [
    "faster-whisper>=0.10.0",
    "numpy",
    "torch",
    "loguru",
    "pydantic",
]
