[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "assemblyai-asr-handler"
description = "AssemblyAI ASR Handler for OpenAvatarChat"
requires-python = ">=3.8"
dependencies = [
    "assemblyai>=0.17.0",
    "numpy",
    "torch",
    "loguru",
    "pydantic",
]
